chore(ci): add tests